--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,6 @@ FONTS
 GLOBAL VARIABLES
 ============================*/
 :root {
-    --clr-bright-orange: hsl(31, 77%, 52%);
     --clr-dark-cyan: hsl(185, 75%, 39%);
     --clr-very-dark-desat-blue: hsl(229, 23%, 23%);
     --clr-dark-grayish-blue: hsl(227, 10%, 46%);
@@ -16,7 +15,6 @@ GLOBAL VARIABLES
     --radius-2: 40px;
     --ff-primary: "Kumbh Sans", sans-serif;
     --ff-size: 18px;
-    --transition: all 0.3s;
 }
 *,
 *::before,
@@ -29,12 +27,32 @@ body {
     height: 100vh;
     display: grid;
     place-items: center;
+    gap: 1rem;
     background: var(--clr-dark-cyan);
     padding-top: 10%;
     font-size: var(--ff-size);
     font-family: var(--ff-primary);
     color: var(--clr-gray-dark);
-    overflow: hidden;
+    transition: all .3s;
+}
+body::before,
+body::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transition: all .5s
+}
+body::before{
+    background: linear-gradient(60deg, hsla(195, 90%, 37%, 0.35), hsla(174, 100%, 66%, 0.337));
+    clip-path: circle(50% at -20% top);
+}
+body::after{
+    background: linear-gradient(45deg,hsla(174, 100%, 66%, 0.337),  hsla(195, 90%, 37%, 0.35));
+    clip-path: circle(50% at 110% bottom);
 }
 h1,
 h2 {
@@ -42,21 +60,6 @@ h2 {
     color: var(--clr-very-dark-desat-blue);
     font-size: var(--ff-size);
     font-weight: 700;
-}
-.body__bg-img-top,
-.body__bg-img-bottom {
-    position: absolute;
-    width: 100%;
-    z-index: -1;
-    overflow: hidden;
-}
-.body__bg-img-top {
-    top: -40%;
-    left: -50%;
-}
-.body__bg-img-bottom {
-    bottom: -20%;
-    right: -60%;
 }
 .card {
     width: 350px;
@@ -128,6 +131,7 @@ h2 {
     gap: 0.5em;
 }
 .attribution {
+    /* position: fixed; */
     color: white;
     font-size: 11px;
     text-align: center;
@@ -136,14 +140,26 @@ h2 {
     color: white;
 }
 @media screen and (min-width: 700px) {
-    .body__bg-img-top {
-        top: -70%;
-        left: -20%;
-        width: 70%;
+    body::before{
+        clip-path: circle(50% at -4% top);
     }
-    .body__bg-img-bottom {
-        bottom: -90%;
-        right: -20%;
-        width: 70%;
+    body::after{
+        clip-path: circle(50% at 100% bottom);
+    }
+}
+@media screen and (min-width: 1000px) {
+    body::before{
+        clip-path: circle(50% at 4% top);
+    }
+    body::after{
+        clip-path: circle(50% at 95% bottom);
+    }
+}
+@media screen and (min-width: 1400px) {
+    body::before{
+        clip-path: circle(50% at 8% top);
+    }
+    body::after{
+        clip-path: circle(50% at 90% bottom);
     }
 }
