--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ GLOBAL VARIABLES
 }
 body {
     height: 100vh;
+    max-height: 100vh;
     display: grid;
     place-items: center;
     gap: 1rem;
