--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,8 @@ body::after{
     width: 100%;
     height: 100%;
     z-index: -1;
-    transition: all .5s
+    transition: all .5s;
+    position: fixed;
 }
 body::before{
     background: linear-gradient(60deg, hsla(195, 90%, 37%, 0.35), hsla(174, 100%, 66%, 0.337));
